<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_item_master"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_itemmaster" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_shop" />

        <item
            android:id="@+id/nav_userproile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Profile" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Order" />



    </group>
</menu>